<resources>
    <string name="app_name">Nurture Nest</string>

    <!-- General messages -->
    <string name="welcome_message">Welcome to Nurture Nest</string>
    <string name="login_prompt">Please Enter Email</string>
    <string name="password_prompt">Please Enter Password</string>
    <string name="register_prompt">Create a new account</string>
    <string name="forgot_password">Forgot your password?</string>

    <!-- Buttons -->
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_continue">Continue</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!-- Lunch Ordering Screen -->
    <string name="lunch_title">🍽️ Lunch Menu</string>
    <string name="lunch_subtitle">Select meals for the week</string>

    <!-- Days of the week -->
    <string name="day_monday">📅 Monday</string>
    <string name="day_tuesday">📅 Tuesday</string>
    <string name="day_wednesday">📅 Wednesday</string>
    <string name="day_thursday">📅 Thursday</string>
    <string name="day_friday">📅 Friday</string>

    <!-- Monday Menu Items -->
    <string name="monday_chicken">Chicken and Rice</string>
    <string name="monday_veggie">Vegetable Stew</string>

    <!-- Tuesday Menu Items -->
    <string name="tuesday_pasta">Mac and Cheese</string>
    <string name="tuesday_soup">Tomato Soup and Bread</string>

    <!-- Wednesday Menu Items -->
    <string name="wednesday_beef">Beef Stew and Rice</string>
    <string name="wednesday_fruit">Fruit Salad and Yogurt</string>

    <!-- Thursday Menu Items -->
    <string name="thursday_fish">Fish Fingers and Chips</string>
    <string name="thursday_veggie">Vegetable Pasta</string>

    <!-- Friday Menu Items -->
    <string name="friday_pizza">Mini Pizza</string>
    <string name="friday_soup">Pumpkin Soup</string>

    <!-- Button -->
    <string name="save_button">✓ Save Order</string>


    <string name="class_attendance">CLASS ATTENDANCE</string>
    <string name="submit">SUBMIT</string>
    <string name="class_hint">CLASS:</string>
    <string name="date_hint">DATE:</string>
    <string name="no">No</string>
    <string name="student_name">Student Name</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>

    <!-- Notification Activity Strings -->
    <string name="post_announcement_title">Post Announcement</string>
    <string name="post_announcement_subtitle">Share important updates with your team</string>

    <string name="label_title">TITLE</string>
    <string name="label_message">MESSAGE</string>

    <string name="hint_title">Enter announcement title</string>
    <string name="hint_message">Type your message here...</string>

    <string name="urgent_label">Mark as Urgent</string>
    <string name="urgent_description">High priority notification</string>

    <string name="btn_post_announcement">Post Announcement</string>
    <string name="btn_back_dashboard">Back to Dashboard</string>

    <!-- Content Descriptions for Accessibility -->
    <string name="announcement_icon_desc">Announcement icon</string>
    <string name="urgent_icon_desc">Urgent alert icon</string>
    <string name="urgent_switch_desc">Toggle urgent priority for announcement</string>

    <string-array name="months_array">
        <item>All Months</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


</resources>
